--- a/.github/workflows/project1/ci.yml
+++ b/.github/workflows/project1/ci.yml
@@ -1,15 +1,18 @@
-name: Project 2 CI
+name: CI
 
 on:
   push:
+    branches: [ main ]
     paths:
-    - 'project2/**'
+      - 'project1/**'
   pull_request:
+    branches: [ main ]
     paths:
-    - 'project2/**'
+      - 'project1/**'
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
@@ -22,8 +25,6 @@ jobs:
 
     - name: Install dependencies
       run: npm ci
-      working-directory: project2
 
     - name: Run tests
       run: npm test
-      working-directory: project2
