--- a/.github/workflows/project2/ci.yml
+++ b/.github/workflows/project2/ci.yml
@@ -3,8 +3,12 @@ name: CI
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'project2/**'
   pull_request:
     branches: [ main ]
+    paths:
+      - 'project2/**'
 
 jobs:
   build:
